# mlBased-NIDS-research

./: .gitignore  README.md  config.py  main.py  pyproject.toml
results/: all_results.csv  attack_breakdown_all.csv  experiment_results.csv  feature_importance_all.csv  lr_importance_exp1.csv  lr_importance_exp3.csv  lr_importance_exp4.csv  rf_importance_exp3.csv  rf_importance_exp4.csv  rf_importance_exp5.csv  svm_importance_exp0.csv  svm_importance_exp3.csv  svm_importance_exp5.csv
results/feature_importance/: lr_importance_exp0.csv  lr_importance_exp2.csv  lr_importance_exp5.csv  rf_importance_exp0.csv  rf_importance_exp1.csv  rf_importance_exp2.csv  svm_importance_exp1.csv  svm_importance_exp2.csv  svm_importance_exp4.csv
scripts/: attack_breakdown.py  combine_cic.py  explore.py  f1score.py  saving_atk_brkdwn.py  saving_ft_imp.py  visualisations.py
src/: aligner.py  cleaner.py  context.py  extractor.py  feature_importance.py  loader.py  pipeline.py  preprocessor.py
src/facade/: __init__.py  dataset_facade.py
src/models/: logistic_regression.py  random_forest.py  svm.py  svm_model.py
src/strategies/: __init__.py  base.py  lr_strategy.py  rf_strategy.py  svm_strategy.py
src/web/: app.py
src/web/templates/: base.html  compare.html  index.html  predict.html  results.html
tests/: test_cleaner.py  test_extractor.py  test_loader.py  test_preprocessor.py
